--- a/partyman v1/css/landing-page.css
+++ b/partyman v1/css/landing-page.css
@@ -117,7 +117,7 @@ html {
     padding-top: 50px; /* If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
     padding-bottom: 50px;
     text-align: center;
-    color: #f8f8f8;
+    background-color: #7FB2F0;
     background-size: cover;
     overflow: visible;
 }
