--- a/partyman v1/css/styles.css
+++ b/partyman v1/css/styles.css
@@ -1,4 +1,6 @@
-
+html{
+    background-color: #7FB2F0; 
+}
 
 h1{
     font-family: 'Bree serif', 'serif';
@@ -22,10 +24,11 @@ td {
 }
 
 .button-setting{
+    background-color: #35478C;
     text-align: left;
-    color: black;
     text-align: left;
     align-content: left;
+    color: #ffffff;
     padding-left: 15px;
     padding-bottom: 5px;
     padding-top: 10px;
