--- a/partyman v1/css/landing-page.css
+++ b/partyman v1/css/landing-page.css
@@ -122,6 +122,7 @@ html {
     text-align: center;
     background-size: cover;
     overflow: visible;
+    color: white !important;
 }
 
 .intro-message {
