--- a/partyman v1/css/styles.css
+++ b/partyman v1/css/styles.css
@@ -177,3 +177,12 @@ h4{
 .panel-body h2, h3, h4, h5{
   text-align: left;
 }
+
+.panel-group .panel+.panel {
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
+.panel-group{
+  margin-bottom: 0;
+}
