css fix booking

--- a/partyman v1/css/styles.css
+++ b/partyman v1/css/styles.css
@@ -21,6 +21,7 @@ td {
     padding: 20px;
     text-align: left;
     border-bottom: 2px dotted #ddd;
+    font-weight: normal;
 }
 
 .button-setting{
